# ProjectLib

./: CMakeLists.txt  README.md
include/: Common.h  GeneralProjectHeader.h  OCSExport.h  Project.h  VersionCapabilities.h  XMLExport.h  XMLExportable.h  XMLImportable.h
include/SoftwareSpecific/Timeline/: TimelineSpecificData.h
include/XML/: XML.hpp
src/cli/: ProjectLibCLI.cpp
src/lib/: GeneralProjectHeader.cpp  OCSExport.cpp  Project.cpp  VersionCapabilities.cpp  XMLExport.cpp
src/lib/SoftwareSpecific/Timeline/: TimelineSpecificData.cpp
src/lib/XML/: XML.cpp
